--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ Pillow==10.0.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.6
 djangorestframework-simplejwt==5.2.2
+django-phonenumber-field[phonenumberslite]
