--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     ports:
       - "8000:8000"
     environment:
+      ALLOWED_HOSTS: "0.0.0.0 127.0.0.1"
       DB_HOST: "postgres"
       POSTGRES_DB: "online_store_db"
       POSTGRES_USER: "AlexUA"
