--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.6
 djangorestframework-simplejwt==5.2.2
 django-phonenumber-field[phonenumberslite]
+django-extensions
