--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       POSTGRES_USER: "AlexUA"
       POSTGRES_PASSWORD: "online_store"
       DEBUG: 1
-      OPENAI_API_KEY: "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"
+      OPENAI_API_KEY:"fff"
     depends_on:
       - postgres
   postgres:
