--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     depends_on:
       - postgres
     networks:
-      - network1
+      - network_gifthub
   postgres:
     container_name: online_store_db
     image: postgres:13.8
@@ -29,10 +29,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - network1
+      - network_gifthub
   pgadmin:
     networks:
-      - network1
+      - network_gifthub
     container_name: online_store_pgadmin
     depends_on:
       - postgres
@@ -54,5 +54,5 @@ services:
 volumes:
   postgres_data:
 networks:
-  network1:
+  network_gifthub:
     name: my-pre-existing-network
