--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Django==4.2.3
+Django==5.0
+psycopg2-binary
 djangorestframework==3.14.0
 markdown==3.4.4
 django-filter
 Pillow==10.0.0
-gunicorn==20.1.0
+gunicorn
 python-dotenv
-psycopg2-binary==2.9.6
+
 djangorestframework-simplejwt==5.2.2
 django-phonenumber-field[phonenumberslite]
 django-extensions
