--- a/_fly.toml
+++ b/_fly.toml
@@ -11,12 +11,20 @@ primary_region = "mad"
   destination="/code/shop"
 
 
+
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = true
+  auto_start_machines = true
   min_machines_running = 1
-  processes = ["app"]
+  [http_service.concurrency]
+    type = "requests"
+    soft_limit = 200
+    hard_limit = 250
+
+
+
 
 
 [[statics]]
